@@ -9,6 +9,8 @@
         <p class="align-center">
           <code class="api-key" id="apikey" onclick="navigator.clipboard.writeText(document.getElementById('apikey').innerText)" title="Click to copy to clipboard">{{ api_key }}<img src="img/copy.svg" height="16" /></code>
         </p>
+        <h1 class="align-center">Status</h1>
+        <p class="align-center">{{ errors }}</p>
 
     </div>
 
